--- a/ShapeArea/ShapeArea.csproj
+++ b/ShapeArea/ShapeArea.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AreaCalculator.cs" />
     <Compile Include="Circle.cs" />
+    <Compile Include="Triangle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shape.cs" />
   </ItemGroup>
